# csnake

./: .gitignore  CMakeLists.txt
src/: board.h  errors.h  game_state.h  pixel.h  snake.c  snake.h
src/memory_allocator/: memory_allocator.c
